# tanukioke

./: .gitignore  Cargo.toml  README.md  config.toml  config.toml.example
docs/: lrx-format.md  transport-sync.md
src/: app.rs  audio.rs  config.rs  library.rs  lrc.rs  main.rs  queue.rs
src/lrx/: mod.rs  parse.rs  serialize.rs
src/ui/: library_view.rs  lrx_editor.rs  lrx_help.rs  lyrics.rs  lyrics_window.rs  mod.rs  player.rs  queue.rs  settings.rs
