[package]
name = "tanukioke"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
eframe = "0.32.3"
egui_extras = { version = "0.32.3", features = ["default"] }
regex = "1.12.3"
rodio = { version = "0.21.1", features = ["wav", "flac", "mp3", "vorbis"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
walkdir = "2.5.0"
